test/fails/ir/missblock.ir.interpret
No block with the id 2 exists in this function.
